syntax = "proto3";

package file_streaming;

option go_package = "gen/";

message FileFormat {
  string formatId = 1;
  string formatNote = 2;
  string format = 3;
  int64 fileSize = 4;
  string ext = 5;
  string resolution = 6;
  string audioExt = 7;
  string videoExt = 8;
  float abr = 9;
}

message FileMeta {
  string id = 1;
  string title = 2;
  repeated FileFormat formats = 3;
  string thumbnail = 4;
  string durationString = 5;
  string channel = 6;
  int64 likeCount = 7;
  int64 viewCount = 8;
}

message RequestUrl {
  string url = 1;
}

service GetFileMetaService {
  rpc GetFileMeta(RequestUrl) returns (FileMeta) {};
}