syntax = "proto3";

package file_streaming;

option go_package = "gen/";

message FileRequest {
    string formatId = 1;
    string url = 2;
}

message FileResponse {
    bytes fileBytes = 1;
    string status = 2;
}

service FileStreamingService {
    rpc GetFileBytesStream(FileRequest) returns (stream FileResponse) {};
}